Disabling line 3206 in shellbrowser.cpp will enable the menu item to launch the Folder Options dialog. In Windows, it works just fine. In ReactOS, it does not work and the log shows why.
80040154 is REGDB_E_CLASSNOTREG. This following is the XP CLSID entry for the one missing in ROS:
Windows Registry Editor Version 5.00
|
|
[HKEY_CLASSES_ROOT\CLSID\{6D5313C0-8C62-11D1-B2CD-006097DF8C11}]
|
@="Folder Options Property Page Extension"
|
|
[HKEY_CLASSES_ROOT\CLSID\{6D5313C0-8C62-11D1-B2CD-006097DF8C11}\InProcServer32]
|
@=hex(2):25,00,53,00,79,00,73,00,74,00,65,00,6d,00,52,00,6f,00,6f,00,74,00,25,\
|
00,5c,00,73,00,79,00,73,00,74,00,65,00,6d,00,33,00,32,00,5c,00,53,00,48,00,\
|
45,00,4c,00,4c,00,33,00,32,00,2e,00,64,00,6c,00,6c,00,00,00
|
"ThreadingModel"="Apartment"
|
It looks like the class needs to be registered and it should hopefully work in ROS.