[BROWSEUI][SHELL32] Stub Folder Options Property Page extension CORE-10837 - Stub the Property pages - Disable some code that prevented the property pages from working (CORE-11140) - Leave the menu item disabled for now, since a dialog that does not do anything will only confuse people (CORE-11141)

svn path=/trunk/; revision=71192